syntax = "proto3";

package order;

message OrderInfo{
  int32 id = 1 ;
  string name = 2;
  string orderStatus = 3;
}

message OrderRequest{
  int32 orderId = 1;
  int64 timeStamp = 2;
}

service OrderService{
  rpc GetOrderInfo(OrderRequest) returns (OrderInfo);
}